# comprehensive-rust

./: .gitignore  Cargo.toml  README.md
e05_6_fibonacci/src/: main.rs
e06_7_collatz_sequence/src/: main.rs
e09_5_geometry/: Cargo.toml
e09_5_geometry/src/: main.rs
e10_7_elevator_events/: Cargo.toml
e10_7_elevator_events/src/: main.rs
e12_5_expression_evaluation/: Cargo.toml
e12_5_expression_evaluation/src/: main.rs
e13_4_generic_logger/: Cargo.toml
e13_4_generic_logger/src/: main.rs
e15_7_generic_min/: Cargo.toml
e15_7_generic_min/src/: main.rs
e16_8_counter/: Cargo.toml
e16_8_counter/src/: main.rs
e17_8_rot13/: Cargo.toml
e17_8_rot13/src/: main.rs
e19_8_builder_type/: Cargo.toml
e19_8_builder_type/src/: main.rs
e20_4_binary_tree/: Cargo.toml
e20_4_binary_tree/src/: main.rs
e22_5_health_statistics/: Cargo.toml
e22_5_health_statistics/src/: main.rs
e23_4_protobuf_parsing/: Cargo.toml
e23_4_protobuf_parsing/src/: main.rs
e25_4_iterator_method_chaining/: Cargo.toml
e25_4_iterator_method_chaining/src/: main.rs
e26_5_gui_modules/: Cargo.toml
e26_5_gui_modules/src/: button.rs  label.rs  main.rs  widget.rs  window.rs
e27_4_luhn_algorithm/: Cargo.toml
e27_4_luhn_algorithm/src/: main.rs
e29_8_rewriting_with_result/: Cargo.toml
e29_8_rewriting_with_result/src/: main.rs
e30_7_ffi_wraper/: Cargo.toml
e30_7_ffi_wraper/src/: main.rs
e5_6_fibonacci/: Cargo.toml
e6_7_collatz_sequence/: Cargo.toml
e6_7_collatz_sequence/src/: main.rs
e8_5_nested_arrays/: Cargo.toml
e8_5_nested_arrays/src/: main.rs
